# PyDI

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  PyDI_Winter_Tutorial.ipynb  README.md  oversample_xml_datasets.py  pyproject.toml  setup.py  test_enhanced_tokenized_match.py  test_schema_matching.py  test_tokenized_match.py
.claude/: settings.json
PyDI/: README.md  __init__.py
PyDI/datatranslation/: __init__.py  base.py  mapping_translator.py
PyDI/docs/: __init__.py
PyDI/entitymatching/: __init__.py  base.py  comparators.py  evaluation.py  feature_extraction.py  llm_based.py  ml_based.py  plm_based.py  rule_based.py  text_formatting.py
PyDI/entitymatching/blocking/: __init__.py  base.py  blocking_evaluation.py  embedding.py  noblocking.py  sorted_neighbourhood.py  standard.py  token_blocking.py
PyDI/entitymatching/post_clustering/: __init__.py  base.py  centre_clusterer.py  connected_components.py  greedy_one_to_one.py  hierarchical_clusterer.py  maximum_bipartite_matching.py  stable_matching.py
PyDI/examples/: autorules_quickstart.py  blocking_example.ipynb  code_extractor_basic.ipynb  data_fusion_example.ipynb  data_fusion_winter_showcase.ipynb  data_loading_example.ipynb  data_loading_example.py  fusion_debug.jsonl  fusion_eval_mismatches.jsonl  information_extraction.ipynb  information_extraction_llm.ipynb  llm_extraction_langchain.ipynb  llm_matching_quickstart.ipynb  normalization_demo_winter_like.py  normalization_quickstart.ipynb  normalization_quickstart.py  profiling_example.py  schema_matching_example.py  schemamatching_example.ipynb
PyDI/examples/fusion_output/: correspondences.csv  fused_data.csv  fused_movies.csv  fusion_report.html  fusion_report.json  input_summary.json
PyDI/fusion/: __init__.py  analysis.py  base.py  engine.py  evaluation.py  fusion_rules.py  provenance.py  reporting.py  strategy.py
PyDI/fusion/conflict_resolution/: __init__.py  date.py  general.py  list.py  numeric.py  string.py  utils.py
PyDI/fusion/rules/: __init__.py  date.py  general.py  list.py  numeric.py  string.py
PyDI/informationextraction/: __init__.py  base.py  code.py  evaluation.py  llm.py  regex.py  rules.py  rules_backup.py  rules_fixed.py
PyDI/io/: __init__.py  loaders.py
PyDI/normalization/: __init__.py  columns.py  datasets.py  detectors.py  text.py  transforms.py  types.py  units.py  validators.py  values.py
PyDI/profiling/: __init__.py  profiler.py
PyDI/schemamatching/: __init__.py  base.py  duplicate_based.py  evaluation.py  instance_based.py  label_based.py  llm_based.py  simple.py
PyDI/tests/: test_informationextraction.py  test_informationextraction_autorules.py  test_informationextraction_llm.py  test_preprocessing.py
PyDI/tests/blocking/: test_embedding_blocking.py  test_sorted_neighbourhood.py  test_token_blocking.py
PyDI/tests/datatranslation/: conftest.py  test_base.py  test_mapping_translator.py
PyDI/tests/entitymatching/: __init__.py  conftest.py  test_evaluation.py  test_integration.py  test_llm_based_matcher.py  test_ml_based.py  test_rule_based.py
PyDI/tests/schemamatching/: __init__.py  conftest.py  test_base.py  test_duplicate_based.py  test_evaluation.py  test_instance_based.py  test_label_based.py
PyDI/tutorial/: PyDI_Tutorial.ipynb  PyDI_Winter_Tutorial.ipynb  fusion_debug.jsonl  movie_data_fusion.ipynb
PyDI/utils/: __init__.py  llm.py  similarity_registry.py  xml_loader.py
PyDI/wiki/: Blocking.md  DataFusion.md  DataTranslation.md  EntityMatching.md  Evaluation.md  Home.md  IO.md  InformationExtraction.md  Normalization.md  Profiling.md  SchemaMatching.md  Tutorial.md  Utils.md
docs/: high_level_design.md
docs/examples/: __init__.py  entitymatching_example.ipynb  information_extraction_llm.ipynb  ml_entitymatching_example.ipynb  normalization_demo_winter_like.ipynb  normalization_quickstart.ipynb  profiling_example.ipynb
docs/tutorial/: PyDI_Tutorial.ipynb  fusion_debug.jsonl
docs/wiki/: Home.md  _Sidebar.md
exercises/: README.md
exercises/01_Data_Formats/Solution/: 01_data_parsing_solution.ipynb  02_json_schema_validation_gpu_solution.ipynb  02_json_schema_validation_solution.ipynb  03_information_extraction_solution.ipynb
exercises/01_Data_Formats/Task/: 01_data_parsing_task.ipynb  02_json_schema_validation_gpu_task.ipynb  02_json_schema_validation_task.ipynb  03_information_extraction_task.ipynb  IE686_LA_EX_Langgraph_Introduction.ipynb  evaluation.py
exercises/02_Schema_Mapping/: README.md  WDI-IntroMapForce-HWS2024.pptx  WDI-IntroMapForce-HWS2024_solutions.pptx
exercises/02_Schema_Mapping/data/: actors.csv  movie_list.csv
exercises/02_Schema_Mapping/solution/: actors_ex.mfd  movies_ex.mfd
exercises/03_Identity_Resolution/: README.md  WDI-Exercise-Identity-Resolution-HWS2024.pptx
exercises/04_Data_Fusion/: README.md  WDI-Exercise-Quality-Fusion-HWS2024.pptx
output/entitymatching/: academy_awards_2_actors_correspondences.csv  debugResultsMatchingRule.csv  debugResultsMatchingRule.csv_short
output/fusion/: recordGroupConsistencies.csv
output/tutorial/: matching_detailed_results.csv  matching_evaluation_summary.json
src/entitymatching/: __init__.py
src/fusion/: __init__.py  analysis.py  base.py  evaluation.py  reporting.py
src/informationextraction/: autorules.py
src/io/: __init__.py  loaders.py
src/normalization/: types.py
src/tests/: __init__.py
src/utils/: normalization.py  similarity_registry.py
tests/schemamatching/: test_duplicate_based.py  test_instance_based.py
winter/logs/: debugResultsBlocking_SortedNeighbourhood.csv  entitymatching_log_default.txt  entitymatching_log_trace.txt  fusion_log_default.txt  fusion_log_trace.txt
winter/wiki/: Blocking.md  Data-Model.md  Data-Normalisation.md  DataFusion.md  DuplicateDetection.md  Evaluation.md  Event-Usecase.md  Event-and-Result-Logging.md  Home.md  IdentityResolution.md  Learning-Matching-Rules.md  Matching.md  RapidMiner-Integration.md  SchemaMatching.md  SimilarityMeasures.md  WInte.r-Tutorial.md  WebTables.md  _Sidebar.md
winter/winter-framework/: pom.xml
winter/winter-usecases/: pom.xml
(+1399 files in other folders)
